2004-02-27 nalin
	* src/pam_krb5_storetmp.c: add this helper, which creates a file using
	mkstemp, filling it with supplied data.
	* src/storetmp.c: add routines for using pam_krb5_storetmp to create
	copies of session-specific ticket files after crossing an exec(), so
	that a new SELinux context can apply to the new file.
	* everything: update copyright statements to include this year.
	* src/stash.c(_pam_krb5_stash_clone_v5): add, to call
	_pam_krb5_storetmp_file to copy the ccache.
	* src/v5.c(v5_save): clone the ticket file after creating it.
	* src/stash.c(_pam_krb5_stash_clone_v4): add, to call
	_pam_krb5_storetmp_file to copy the ccache.
	* src/v4.c(v4_save): clone the ticket file after creating it.

2004-01-07 nalin
	* src/stash.h: always have a v4present field in the structure.
	* src/v4.h: don't try 524 conversion if we don't have krb4 -- we
	wouldn't be able to do anything with the results.  Noted by Jörg
	Albert.

2004-01-07 nalin
	* src/v4.c(v4_save): make the stub v4_save function match the
	non-stub's prototype.  Noted by Jörg Albert.
	* src/v4.c(v4_destroy): don't return a value from this function, which
	returns void.  Noted by Jörg Albert.

2003-11-25 nalin
	* README: updates

2003-11-20 nalin
	* src/userinfo.c, src/userinfo.h: when setting things up for a user,
	obey "mappings" settings.  Because we can't be certain that the
	generated principal will pass through aname_to_lname correctly, don't
	do that any more.

2003-11-20 nalin
	* src/initopts.c(_pam_krb5_set_init_opts): set the ticket lifetime,
	if configured, as an initopt.  This change lets us fix #109331.

2003-11-20 nalin
	* src/options.c, src/options.h: add code for parsing a "mappings"
	setting.  Reintroduce ticket_lifetime, which I mistakenly thought was
	a libdefault setting now.

2003-11-20 nalin
	* src/map.c, src/map.h: add mapping functions which mimic OpenLDAP's
	saslRegexp functionality for mapping local user names to principal
	names.

2003-11-20 nalin